--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/mysql": "^2.15.21",
     "@types/node": "^20.4.2",
@@ -22,5 +23,4 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
-
 }
