--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon ./src/index.ts"
   },
   "dependencies": {
+    "@railway/cli": "^3.4.0",
     "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
