--- a/.github/workflows/deploy_production.yml
+++ b/.github/workflows/deploy_production.yml
@@ -14,7 +14,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Railway CLI
-        run: npm install -g railway
+  run: npm install -g @railway/cli
+
 
       - name: Deploy to Railway Production
         run: |
