--- a/.github/workflows/railway.yml
+++ b/.github/workflows/railway.yml
@@ -10,6 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'  # Specify Node.js version 16.x
+
       - name: Checkout code
         uses: actions/checkout@v2
 
